# FastApi-microservices

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/API/: OrderService.js  ProductService.js
frontend/src/components/: AppRouter.jsx  Dashboard.jsx  Navbar.js  Orders.js  Product.jsx  Products.jsx  ProductsCreate.js  Sidebar.jsx
frontend/src/routers/: router.js
inventory/: consumer.py  main.py  models.py  redis.py  settings.py
payment/: consumer.py  http_client.py  main.py  models.py  product_client.py  redis_conn.py  settings.py
