[tool.poetry]
name = "fastapi-microservices"
version = "0.1.0"
description = ""
authors = ["Andrii L. <99610122+Lap-DevOps@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
redis-om = "^0.2.2"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"
isort = { extras = ["pipfile_deprecated_finder2"], version = "^5.13.2" }

flake8 = "^7.0.0"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310']
include = '\.py?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
'''


[tool.isort]
profile = 'black'
line_length = 120
#known_local_folder = ["app"]
honor_noqa = true
